# django-access-control

./: README.md  publish.sh  setup.cfg
src/django_access_control/: admin.py  auth_backend.py  managers.py  models.py  permissions.py  querysets.py  utils.py
src/granular_permissions/: admin.py  auth_backend.py  exceptions.py  managers.py
