[metadata]
name = django-granular-permissions
version = 0.1
author = Eerik Sven Puudist
description = Object and field level access control for Django
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/django-granular-permissions/django-granular-permissions
project_urls =
    Bug Tracker = https://github.com/django-granular-permissions/django-granular-permissions
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    django

[options.packages.find]
where = src
