[metadata]
name = django-access-control
version = 0.3
author = Eerik Sven Puudist
description = Object level access control for Django
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/django-access-control/django-access-control
project_urls =
    Bug Tracker = https://github.com/django-access-control/django-access-control/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    django

[options.packages.find]
where = src
